Bug 34217. javascript: protocol clears window. (SeaMonkey_M15_BRANCH only). r=leaf